# hamurabi

./: hamurabi.cabal
src/: Main.hs
