name: hamurabi
version: 0.1.0.0
synopsis: A port of the BASIC computer game to Haskell
-- Description
license: MIT
license-file: LICENSE
author: ysgard
maintainer: ysgard@gmail.com
-- Copyright
category: Development
build-type: Simple
-- extra-source-files
-- data-files
cabal-version: >=1.10
executable hamurabi
  main-is: Main.hs
  --other-modules
  --other-extensions
  build-depends: base >=4.6
               , random
  hs-source-dirs: src
  ghc-options: -Wall
  default-language: Haskell2010
